--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.servlet.context-path=/drone/api
 
 # DB config
 #spring.datasource.url=jdbc:h2:file:/data/drone
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:maindb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
@@ -24,4 +24,9 @@ logging.level.com.interview=DEBUG
 logging.file.name=app.log
 logging.pattern.file=%d %p %c{1.} [%t] %m%n
 logging.pattern.console=%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
+
+#scheduler
+jobs.enabled=true
+# every minute
+jobs.delay=60000
 
